Kinda working. Wikidata given names had to be turned off.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <body>
     <div id="status-message" class="hidden"></div>
 
-    <h1 class="title">Known Leaders</h1>
+    <h3 class="title">Known Leaders</h3>
 
     <div class="intro-description">Learn about who leads what!</div>
 
+    <h1 id="leader-fact"></h1>
+
     <div class="control-pane">
-      <button id="reset-button">Reset</button>
-      <button id="bone-button">Throw Bone</button>
+      <button id="reset-button">Get new leader fact</button>
     </div>
 
     <div id="version-info"></div>
