Add spinner and waiting message. Basic layout.

--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body>
-    <div id="status-message" class="hidden"></div>
-
-    <h3 class="title">Known Leaders</h3>
-
-    <div class="intro-description">Learn about who leads what!</div>
-
+  <body class="outer-container">
+    <div>
+      <div class="" id="thinking-icon">🤔</div>
+      <span id="status-message" class="hidden"></span>
+    </div>
+    
     <h1 id="leader-fact"></h1>
 
     <div class="control-pane">
-      <button id="reset-button">Get new leader fact</button>
+      <button id="reset-button">Get a new leader fact</button>
     </div>
 
     <div id="version-info"></div>
