Do a lighter wikidata query, then use the wikidata API to get specific entities. Add links to wikipedia.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
     
     <h1 id="leader-fact"></h1>
 
-    <div class="control-pane">
-      <button id="reset-button">Get a new leader fact</button>
-    </div>
+    <a id="group-link"></a>
+    <button id="reset-button">Get a new leader fact</button>
 
     <div id="version-info"></div>
 
