Get images when they're available.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     
     <h1 id="leader-fact"></h1>
 
+    <img id="group-image">
+
     <a id="group-link"></a>
     <button id="reset-button">Get a new leader fact</button>
 
