Align controls vertically some.

--- a/index.html
+++ b/index.html
@@ -15,20 +15,22 @@
       <a id="group-link"></a>
     </main>
 
-    <span id="status-message" class="hidden"></span>
+    <section class="controls">
+      <span id="status-message" class="hidden"></span>
 
-    <label for="group-type-select"
-      >The kind of group to get a leader fact about:</label
-    >
-    <select id="group-type-select">
-      <option value="music-group">Music group</option>
-      <option value="game">Game</option>
-      <option value="novel">Novel</option>
-      <option value="organization">
-        Any organization (warning: might take a while)
-      </option>
-    </select>
-    <button id="reset-button">Get a new leader fact</button>
+      <label for="group-type-select"
+        >The kind of group to get a leader fact about:</label
+      >
+      <select id="group-type-select">
+        <option value="music-group">Music group</option>
+        <option value="game">Game</option>
+        <option value="novel">Novel</option>
+        <option value="organization">
+          Any organization (warning: may take a while)
+        </option>
+      </select>
+      <button id="reset-button">Get a new leader fact</button>
+    </section>
 
     <div id="version-info"></div>
 
