--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
       <button id="reset-button">Get a new leader fact</button>
     </section>
 
+    <footer>
+      <a href="https://github.com/jimkang/knownleaders/">Here is the source for this program.</a> This was made during Never Graduate Week at the <a href="https://www.recurse.com/">Recurse Center</a>.
+    </footer>
+
     <div id="version-info"></div>
 
     <script src="index.js"></script>
